fix(nav): prevent icon jump on sidebar close (#8866)

--- a/src/app/core-ui/magic-side-nav/nav-item/nav-item.component.scss
+++ b/src/app/core-ui/magic-side-nav/nav-item/nav-item.component.scss
@@ -294,8 +294,7 @@ button[mat-menu-item].nav-link.active {
 
 :host-context(.nav-sidenav.compactMode) {
   .nav-link {
-    justify-content: center;
-    padding: 12px;
+    justify-content: flex-start;
 
     &:focus,
     &:hover {
@@ -305,7 +304,7 @@ button[mat-menu-item].nav-link.active {
 
     ::ng-deep .mat-mdc-menu-item-text {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       width: 100%;
       padding: 0;
 
